--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xugler"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/QR"/>
+	<classpathentry kind="lib" path="C:/Users/Morten/eclipse-workspace/qr/QRReader/core-3.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Morten/eclipse-workspace/qr/QRReader/javase-3.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
