--- a/.classpath
+++ b/.classpath
@@ -8,9 +8,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xugler"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="libs/yadrone_032.jar"/>
 	<classpathentry kind="lib" path="libs/QRJar.jar"/>
 	<classpathentry kind="lib" path="libs/javase-3.3.0.jar"/>
 	<classpathentry kind="lib" path="libs/core-3.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/YARdroneC.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
